--- a/example/helloworld/index.html
+++ b/example/helloworld/index.html
@@ -6,6 +6,6 @@
   <title>Hello World Vue3</title>
 </head>
 <body>
-  <script src="main.js" type="module"></script>
+  <script src="./main.js" type="module"></script>
 </body>
 </html>
