--- a/example/helloworld/index.html
+++ b/example/helloworld/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hello World Vue3</title>
+  <link rel="icon" href="data:;base64,">
   <style>
     .red {
       color: red;
