feat: 🎸 新增属性更新逻辑

--- a/example/update/index.html
+++ b/example/update/index.html
@@ -13,6 +13,11 @@
       .blue {
         color: blue;
       }
+
+      button {
+        height: 25px;
+        margin-right: 5px;
+      }
     </style>
   </head>
 
